"""
BUILD.bazel for @tummycrypt/tinyland-admin-validation.

Dual-mode build: works with both pnpm (standalone) and Bazel (CI/production).
  Standalone: cd packages/tinyland-admin-validation && pnpm build
  Monorepo:   bazel build //packages/tinyland-admin-validation/...
"""

load("@aspect_rules_js//js:defs.bzl", "js_library", "js_test")
load("@aspect_rules_js//npm:defs.bzl", "npm_package")
load("@aspect_rules_ts//ts:defs.bzl", "ts_project")


ts_project(
    name = "tinyland_admin_validation",
    srcs = glob(
        ["src/**/*.ts"],
        exclude = [
            "src/**/*.test.ts",
            "src/**/*.spec.ts",
        ],
    ),
    declaration = True,
    declaration_map = True,
    source_map = True,
    tsconfig = ":tsconfig.json",
    transpiler = "tsc",
    deps = [
        "//:node_modules",
        "//packages:tsconfig_base",
        "//:node_modules/zod",
        "//:node_modules/@types/node",
        "//packages/tinyland-auth:tinyland_auth",
    ],
    visibility = ["//visibility:public"],
)

npm_package(
    name = "pkg",
    srcs = [
        "package.json",
        ":tinyland_admin_validation",
    ],
    package = "@tummycrypt/tinyland-admin-validation",
    version = "0.1.0",
    visibility = ["//visibility:public"],
)

ts_project(
    name = "tinyland_admin_validation_test_lib",
    srcs = glob(["tests/**/*.test.ts"]),
    declaration = False,
    source_map = True,
    tsconfig = ":tsconfig.json",
    transpiler = "tsc",
    deps = [
        ":tinyland_admin_validation",
        "//:node_modules",
        "//:node_modules/vitest",
    ],
)

js_test(
    name = "test",
    data = [
        ":tinyland_admin_validation",
        ":tinyland_admin_validation_test_lib",
        "//:node_modules",
        "//:node_modules/vitest",
        "vitest.config.ts",
    ],
    entry_point = "//:vitest_bin",
    args = [
        "run",
        "--reporter=verbose",
        "--config",
        "$(rootpath vitest.config.ts)",
    ],
    log_level = "info",
    visibility = ["//visibility:public"],
)

exports_files(
    [
        "package.json",
        "tsconfig.json",
        "vitest.config.ts",
    ],
    visibility = ["//visibility:public"],
)
